fix for offscreen menu

--- a/style.css
+++ b/style.css
@@ -50,14 +50,18 @@ nav{
 @media screen and (max-width:1280px){
   .nav-links{
     width: 50%;
+    overflow-x: hidden;
+    overflow-y: hidden;
   }
 }
 @media screen and (max-width:1024px){
   .nav-links{
     width: 60%;
+    overflow-x: hidden;
+    overflow-y: hidden;
   }
 }
-@media screen and (max-width:768px){
+@media screen and (max-width:390px){
   body{
     overflow-x: hidden;
     overflow-y: hidden;
@@ -68,10 +72,10 @@ nav{
     height: 92vh;
     top: 8vh;
     background-color: #5d4954;
-    display: flex;
+    display: display;
     flex-direction: column;
     align-items: center;
-    width: 50%;
+    width: 0%;
     transform: translateX(100%);
     transition: transform 0.5s ease-in;
   }
@@ -84,6 +88,7 @@ nav{
 }
 .nav-active{
   transform: translateX(0%);
+  width: 50%;
 }
 @keyframes navLinkFade{
   from{
